# dscvr

./: .gitignore  .taurignore  Cargo.toml  README.md  default_settings.toml
.github/: dependabot.yml
.github/workflows/: install_protoc.ps1  rust.yml
common/: Cargo.toml
common/src/: config.rs  lib.rs  utils.rs
desktop/: package.json  pnpm-lock.yaml
desktop/src/: App.tsx  main.tsx
desktop/src-tauri/: build.rs  tauri.conf.json
desktop/src-tauri/src/: blocking_client.rs  main.rs
desktop/src/components/: duplicated-files.tsx  full-text-search.tsx  loading-spinner.tsx
dscvr-common/src/: logger.rs
dscvr-desktop/: components.json  package.json  pnpm-lock.yaml  vite.config.ts
dscvr-desktop/src-tauri/: Cargo.toml
dscvr-desktop/src/lib/hooks/queries/: use-find-duplicated-files.ts
dscvr-indexer/: Cargo.toml  build.rs
dscvr-indexer/src/conversion/: clear_text_conversion.rs  mod.rs
dscvr-indexer/src/conversion/determine_file_type/: determine_file_type_by_extension.rs
dscvr-indexer/src/file_index/: index_file_strategy.rs  mod.rs  search_file_strategy.rs
dscvr-preprocessor/: Cargo.toml
dscvr-preprocessor/src/: main.rs
dscvr-preprocessor/src/file_scanner/: determine_readability_of_file.rs  file_hash.rs
dscvr-scanner/: Cargo.toml  build.rs
dscvr-scanner/src/: utils.rs
dscvr-scanner/src/file_scanner/: mod.rs
indexer/: Cargo.toml
indexer/src/: main.rs
indexer/src/conversion/: clear_text_conversion.rs  convert_to_clear_text_strategy.rs  mod.rs  pdf_conversion.rs
indexer/src/conversion/determine_file_type/: determine_file_type_by_extension.rs  determine_file_type_by_human_readability.rs  determine_file_type_lib_magic.rs  mod.rs
indexer/src/file_index/: file_hash_strategy.rs  find_duplicated_files_strategy.rs  index_file_strategy.rs  mod.rs  persist_metadata_strategy.rs  search_file_strategy.rs
proto/: file_indexer.proto  proto_utils.proto
scanner/: Cargo.toml
scanner/src/: db.rs  main.rs
scanner/src/file_scanner/: mod.rs  should_be_visited.rs
test-data/01/: this_is_a_random_google_docs_file.docx  this_is_an_important_file_for_testing.txt
