[workspace]
members = [
    "common",
    "desktop/src-tauri",
    "indexer",
    "scanner"
]
default-members = [
    "common",
    "desktop/src-tauri",
    "indexer",
    "scanner"
]
resolver = "2"

[workspace.dependencies]
serde = "1.0"
serde_json = "1.0"
filepath = "0.1.2"
interprocess = "1.2.1"
prost = "0.12"
tonic = "0.11.0"
tokio = "1.0"
anyhow = "1.0.79"
log = "0.4.20"
env_logger = "0.10.2"
thiserror = "1.0.56"
rusqlite = "0.31.0"
dotenv = "0.15.0"
derive_builder = "0.20.0"
config = "0.13.1"
tantivy = "0.21.1"
tempfile = "3.9.0"
tonic-types = "0.11.0"
tauri = "1.5"
tauri-build = "1.5"
tonic-build = "0.11.0"
chrono = "0.4.19"
itertools = "0.12.0"
blake3 = "1.5.0"
memmap2 = "0.9.4"
pdf-extract = "0.7.4"

