[package]
name = "dscvr-preprocessor"
version = "0.1.0"
authors = ["Florian Stuchly<stuchlyf@stuchlyf.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dscvr-common = { path = "../dscvr-common" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
filepath = { workspace = true }
interprocess = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow = { workspace = true }
log = { workspace = true, features = [] }
env_logger = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
dotenv = { workspace = true }
derive_builder = { workspace = true }
blake3 = { workspace = true }
memmap2 = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
