[package]
name = "dscvr-desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { workspace = true, features = [] }
tonic-build = { workspace = true }

[dependencies]
tauri = { workspace = true, features = ["shell-open"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
log = { workspace = true }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
